# Sensoriamento-PR-Gama-2025.2

./: .gitignore  README.md
main/: CMakeLists.txt
main/src/: main_primeira_entrega.cpp  main_v1.cpp  main_v2.cpp  main_v3.cpp  main_v4.cpp  main_v5.cpp  test_for_main_v3.cpp
sensing_training_codes/: README.md  RGBchanels.cpp
training_codes/: K-Means_Clustering.cpp  README.md
training_codes/.cache/clangd/index/: RGBchanels.cpp.280D62A472611C10.idx
training_codes/scripts/: build.sh  clean.sh  lsp.sh
training_codes/src/: RGBchanels.cpp  RGBchanels_v1.cpp  RGBchanels_v2.cpp  RGBchanels_v3.cpp  RGBchanels_v4.cpp  RGBchanels_v5.cpp  chapter_01.cpp  chapter_02.cpp  chapter_03.cpp  filters_v1.cpp  filters_v2.cpp  greenFilter.cpp  segmentation_v1.cpp  segmentation_v2.cpp
